Expose adaptive teaching in learning API
